[package]
name = "uffd-tests"
version = "0.1.0"
edition = "2024"

[dependencies]
userfaultfd = { version = "0.9", features = ["linux5_7", "linux5_13", "linux6_7"] }
libc = "0.2"
thiserror = "2.0.17"
displaydoc = "0.2.5"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
rand = "0.8.5"

[patch.crates-io]
userfaultfd = { path = "../userfaultfd-rs/" }

